By default Adjustment Layers should have COMPOSITE_COPY op

Otherwise it makes users perplexed with the result.

BUG:294122